syntax = "proto3";

package transport;

option go_package = "github.com/buhuipao/anyproxy/pkg/proxy_v2/transport/grpc";

// TransportService defines the gRPC streaming service for proxy communication
service TransportService {
    // BiStream provides bidirectional streaming for proxy data
    rpc BiStream(stream StreamMessage) returns (stream StreamMessage);
}

// StreamMessage represents a message in the bidirectional stream
message StreamMessage {
    // Message type
    enum MessageType {
        DATA = 0;      // Raw data message
        JSON = 1;      // JSON message
        CONTROL = 2;   // Control message
    }
    
    MessageType type = 1;
    bytes data = 2;
    string client_id = 3;
    string group_id = 4;
    
    // Optional metadata
    map<string, string> metadata = 5;
}

// ClientInfo contains client identification
message ClientInfo {
    string client_id = 1;
    string group_id = 2;
    string username = 3;
    string password = 4;
} 